# template-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  template-rs.code-workspace
.cargo/: config
src/: lib.rs
