[package]
edition = "2018"
name = "{{project-name}}"
version = "0.1.0"

authors = ["Thomas Villa <thomvil87@gmail.com>"]
description = ""
documentation = "https://docs.rs/{{project-name}}/"
homepage = "https://github.com/thomvil/{{project-name}}-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thomvil/{{project-name}}-rs"

[dependencies]
# chrono = "*"
# lazy_static = "*"
# itertools = "*"
# rand = "*"
# rayon = "*"
# regex = "*"
# serde = { version = "^1", features = ["derive"] }
# serde_json = "*"

# [dev-dependencies]
# claim = "*"

# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
# panic = 'abort'
